# ProyectoRobotica04

./: .gitignore  README.md  comandos.txt  mapa_warehouse.pgm  mapa_warehouse.yaml  mapa_warehouse_real.pgm  mapa_warehouse_real.yaml  mapa_warehouse_temp.pgm  start.sh  start_real.sh
WebRos/: database_schema.sql  db.js  historial.html  historial.js  index.html  landing.html  login.html  package-lock.json  registro.html  script.js  styles.css  velaris.css
WebRos/static/js/: draw_occupancy_grid.js
proy_andres/custom_interface/: CMakeLists.txt  package.xml
proy_andres/proy_andres/: CMakeLists.txt  package.xml
proy_andres/proy_andres_captacion/: package.xml  setup.cfg  setup.py
proy_andres/proy_andres_captacion/proy_andres_captacion/: procesador_imagen.py
proy_andres/proy_andres_interface/: CMakeLists.txt  package.xml
proy_andres/proy_andres_interface/srv/: MyMoveMsg.srv
proy_andres/proy_andres_mundo/: CMakeLists.txt  package.xml
proy_andres/proy_andres_mundo/launch/: warehouse.launch.py
proy_andres/proy_andres_mundo/models/puerta_abierta/: model.config  model.sdf
proy_andres/proy_andres_mundo/models/puerta_cerrada/: model.config  model.sdf
proy_andres/proy_andres_mundo/models/puerta_intermedia/: model.config  model.sdf
proy_andres/proy_andres_mundo/models/workcell/: model.sdf
proy_andres/proy_andres_mundo/param/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
proy_andres/proy_andres_mundo/src/: control_manual.cpp
proy_andres/proy_andres_mundo/worlds/: warehouse.world
proy_andres/proy_andres_nav_punto/: package.xml  setup.cfg  setup.py
proy_andres/proy_andres_nav_punto/proy_andres_nav_punto/: ir_a_punto.py  web_teleop_service.py
proy_andres/proy_andres_nav_punto/src/: ir_a_punto.py
proy_andres/proy_andres_nav_ruta/: package.xml  setup.cfg  setup.py
proy_andres/proy_andres_nav_ruta/proy_andres_nav_ruta/: patrulla_bridge.py  patrullar.py
proy_andres/proy_andres_nav_ruta/src/: patrullar.py
scripts/: publish_initialpose.py
turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_burger/: model.sdf
turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_waffle/: model.sdf
